--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://github.com/<your-username>/torchscript-fastapi-mlflow" target="_blank" class="link__text">
+                <a href="https://github.com/udaysingh288/torchscript-fastapi-mlflow" target="_blank" class="link__text">
                   View Repo <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/<your-username>/torchscript-fastapi-mlflow" title="View Source Code" target="_blank">
+                <a href="https://github.com/udaysingh288/torchscript-fastapi-mlflow" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
@@ -117,10 +117,10 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://github.com/<your-username>/forecasting-batch-scoring" target="_blank" class="link__text">
+                <a href="https://github.com/udaysingh288/forecasting-batch-scoring" target="_blank" class="link__text">
                   View Repo <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/<your-username>/forecasting-batch-scoring" title="View Source Code" target="_blank">
+                <a href="https://github.com/udaysingh288/forecasting-batch-scoring" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
@@ -146,10 +146,10 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://github.com/<your-username>/rag-metrics-assistant" target="_blank" class="link__text">
+                <a href="https://github.com/udaysingh288/rag-metrics-assistant" target="_blank" class="link__text">
                   View Repo <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/<your-username>/rag-metrics-assistant" title="View Source Code" target="_blank">
+                <a href="https://github.com/udaysingh288/rag-metrics-assistant" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
